<resources>
    <string name="app_name">etelRendeles</string>
    <string name="registracio">Regisztráció</string>
    <string name="email">Email</string>
    <string name="jelszo">Jelszó</string>
    <string name="jelszoUjra">Jelszó Újra</string>
    <string name="postacim">Postai Cím</string>
    <string name="szuletesiDatum">Születési dátum</string>
    <string name="megse">Mégse</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="vendegkent">Bejelentkezés vendégként</string>
    <string name="google">Bejelentkezés Google-el</string>
    <string name="telefonszam">Telefonszám</string>
    <string name="jelenlegi">Jelenlegi adataim</string>
    <string name="modosit">Módosít</string>
    <string name="beallitasok">Beállítások</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="oszlopok">Oszlopok</string>
    <string name="kosar">Kosár</string>
    <string name="kereses">Keresés</string>
    <string name="jelszomod">Jelszó módosítás</string>
    <string name="rendeles">Rendelés</string>
    <string name="vissza">Vissza</string>
    <string name="_1000">1000</string>
    <string name="rendelesed">Készítjük a rendelésed...</string>
    <string name="felhasznalok">Felhasználók</string>
    <string name="cim">Étel Rendelés</string>

    <string-array name="etelek">
        <item>Bableves</item>
        <item>Paradicsomleves</item>
        <item>Zöldbableves</item>
        <item>Zöldborsóleves</item>
        <item>Fasirt</item>
        <item>Gombás húsos burek</item>
        <item>Lasagne</item>
        <item>Rántotthús</item>
        <item>Sajttal sonkával töltött csirkemell</item>
        <item>Spagetti</item>
        <item>Borsó főzelék</item>
        <item>Káposzta főzelék</item>
        <item>Francia saláta</item>
        <item>Sopszka saláta</item>
        <item>Uborka saláta</item>
        <item>Gesztenyepüré</item>
        <item>Gesztenyepüré torta</item>
        <item>Mákosguba</item>
        <item>Moszkva torta</item>
        <item>Somlóigaluska</item>
        <item>Vanilia fagyi</item>
    </string-array>
    
    <integer-array name="arak">
        <item>500</item>
        <item>500</item>
        <item>500</item>
        <item>500</item>
        <item>400</item>
        <item>450</item>
        <item>750</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>400</item>
        <item>400</item>
        <item>200</item>
        <item>200</item>
        <item>200</item>
        <item>350</item>
        <item>500</item>
        <item>500</item>
        <item>550</item>
        <item>350</item>
        <item>200</item>
    </integer-array>

    <string-array name="mennyisegek">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    
    <string-array name="kepek">
        <item>@drawable/bableves</item>
        <item>@drawable/paradicsomlev</item>
        <item>@drawable/zoldbableves</item>
        <item>@drawable/zoldborsoleves</item>
        <item>@drawable/fasirt</item>
        <item>@drawable/burek</item>
        <item>@drawable/lasagne</item>
        <item>@drawable/rantott</item>
        <item>@drawable/toltottcsirkemell</item>
        <item>@drawable/spagetti</item>
        <item>@drawable/borso</item>
        <item>@drawable/kaposztafozelek</item>
        <item>@drawable/francia</item>
        <item>@drawable/sopszka</item>
        <item>@drawable/uborka</item>
        <item>@drawable/gesztenyepure</item>
        <item>@drawable/gesztenyetorta</item>
        <item>@drawable/guba</item>
        <item>@drawable/moszkva</item>
        <item>@drawable/galuska</item>
        <item>@drawable/fagyi</item>
    </string-array>
</resources>

