<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/kereses"
        app:showAsAction="always"
        android:icon="@drawable/search"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/kereses"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/kosar"
        app:showAsAction="always"
        android:icon="@drawable/shopping"
        android:title="@string/kosar"
        android:orderInCategory="2"/>
    <item
        android:title=""
        android:icon="@drawable/more"
        app:showAsAction="always"
        android:orderInCategory="3"
        >
        <menu>
            <item
                android:id="@+id/beallitasok"
                android:title="@string/beallitasok"
                android:icon="@drawable/settings"
                android:orderInCategory="1"/>
            <item
                android:id="@+id/felhasznalok"
                android:title="@string/felhasznalok"
                android:icon="@drawable/peoples"
                android:orderInCategory="2"/>
            <item
                android:id="@+id/kijelentkezes"
                android:icon="@drawable/logout"
                android:title="@string/kijelentkezes"
                android:orderInCategory="3"/>

        </menu>
    </item>
</menu>