<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RendeleseimActivity"
    android:scrollbars="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@id/osszeg"
        />

    <TextView
        android:id="@+id/osszeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000"
        android:layout_margin="25dp"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/vissza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true"
        android:background="@color/blue"
        android:onClick="vissza"
        android:text="@string/vissza"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/rendel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:background="@color/blue"
        android:onClick="rendel"
        android:text="@string/rendeles"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_alignStart="@id/osszeg"/>
</RelativeLayout>